7-30 update and fixed HTML conversion in vimrc

--- a/vimwiki_html/Vinland Saga.html
+++ b/vimwiki_html/Vinland Saga.html
@@ -1,7 +1,21 @@
-= Vinland Saga =
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
+<title>Vinland Saga</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
 
+<div id="Vinland Saga"><h1 id="Vinland Saga" class="header"><a href="#Vinland Saga">Vinland Saga</a></h1></div>
+
+<p>
 Wed Jul 31 06:11:11 AM EDT 2024
+</p>
 
+<p>
 So this is going to be a little difficult because I'm going off of the episode I watched the 29th I think, but here we go.
 I remember it wasn't too much, I think it was right after Thorfinn was getting sliced and diced by the bully guard.
 Once the boss stopped him, he ACTUALLY went for the kill and Thorfinn actually defended himself.
@@ -9,9 +23,13 @@ Then it was clear toe Einer that Thorfinn was a warrior who killed a bunch of pe
 (I'm listening to my voice recording at the same time and he said to update the VimWiki haha)
 So Einer was mad at Thorfinn for killing people and Einer almost killed Thorfinn in the barn at night but stopped.
 Thorfinn just thought that he woke up from a bad dream and thanked him, even though Thorfinn didn't thank anyone else that episode.
+</p>
 
+<p>
 Sun Jul 28 06:26:22 PM EDT 2024
+</p>
 
+<p>
 Just started season two.
 It started off showing a new character for the first episode.
 He is a little hot headed like Thorfinn and lost his family and farm before becoming a slave where Thorfinn now works.
@@ -20,9 +38,13 @@ The new guy, I forget his name, has a chip on his shoulder and Thorfinn has all 
 The master's son was told to kill a slave as a right-of-passage to become a man, so they aimed at Thorfinn and new-guy.
 Thorfinn gave himself up and then a new character, the boss of the warriors defending the farm, stopped them.
 I'm excited to see what growth comes from Thorfinn and the new guy this season and what values of life are shown.
+</p>
 
+<p>
 Mon Jul 15 08:26:34 PM EDT 2024
+</p>
 
+<p>
 Finished Season one.
 It ended pretty good, where Askaladd saved Wales and the Prince by sacrificing himself.
 I started watching today with Thorfinn trying to kill him again, but his anger kept him from doing it.
@@ -30,24 +52,36 @@ Askaladd told his back story about his mother going crazy and him trying to kill
 Thorfinn was blinded by rage with no plan, but Askaladd, who apparently was the rightful heir to the throne, waited patiently.
 Thorfinn's "uncle" tried to take him back to Iceland to find Vinland, and told him stories of not giving up against the sea.
 But, Thorfinn saw Askaladd as he died and they both wondered what Thorfinn will do now that he's dead - Thorfinn has the potential to be a true warrior.
+</p>
 
+<p>
 Fri Jul 12 11:19:50 AM EDT 2024
+</p>
 
+<p>
 Askallad just killed his friend.
 They're in the middle of plotting against the King in York.
 Thorfinn just saw an old aquaintance and it was obvious that Thorfinn changed a lot.
 There was also a staged assassination attempt against the prince.
+</p>
 
+<p>
 Wed Jul 10 08:33:52 PM EDT 2024
+</p>
 
+<p>
 Started this and got two episodes in with Aaron and Marissa.
 Pretty good, parasyte vibes so far.
 I'm interested to see how it goes.
 Basically the MC got Kaiju powers and is about to take a placement exam for the "defense force".
 We'll see the complications of keeping his secret.
+</p>
 
+<p>
 Wed Jul 10 03:57:09 PM EDT 2024
+</p>
 
+<p>
 I could have sworn I updated this earlier.
 I watched some Vinland Saga yesterday and an episode today.
 It's pretty good with the Prince becoming a badass and everything.
@@ -55,3 +89,7 @@ The story let Thorfin take backseat with Askallad and the prince and everyone.
 Really interesting that the army is all but gone too.
 It's just Thorfin, Askallad, the prince, and Thorkell now.
 Really liking the dynamics the King poses on the prince and everything too, trying to kill him.
+</p>
+
+</body>
+</html>
