Added Devan Consciousness to Projects with lessons moved there from temp file

--- a/vimwiki_html/To-Do.html
+++ b/vimwiki_html/To-Do.html
@@ -65,7 +65,7 @@ Put Vacation notes into main diary
 Make phone more versitile
 
 <li class="done0">
-Write a python script that will take dates in the wiki entry and link them to my Diary and key-words in the Diary entry and link them to my wiki
+Write a python script that will take dates in the wiki entry and link them to my Diary and key-words in the Diary entry and link them to my wiki @history
 
 <li class="done0">
 Organize To-Do notes so that there are tags or a hierarchy for timeliness
@@ -79,6 +79,9 @@ Do Daily work
 
 <li class="done0">
 learn to edit data with Python for vimwiki stuff too
+
+<li class="done0">
+Goal project: take all phone entries in "temp" file and write them to appropriate location. @vimwiki
 
 </ul>
 
