--- a/vimwiki_html/index.html
+++ b/vimwiki_html/index.html
@@ -11,6 +11,10 @@
 
 <div id="Devan's Wiki"><h1 id="Devan's Wiki" class="header"><a href="#Devan's Wiki">Devan's Wiki</a></h1></div>
 
+<p>
+test
+</p>
+
 <ul>
 <li>
 Projects
@@ -21,6 +25,9 @@ Kitchen
 
 <li>
 ADU
+
+<li>
+<a href="Devan Consciousness.html">Devan Consciousness</a>
 
 </ul>
 <li>
