--- a/vimwiki_html/diary/diary.html
+++ b/vimwiki_html/diary/diary.html
@@ -15,6 +15,9 @@
 <div id="Diary-2024-July"><h3 id="July" class="header"><a href="#Diary-2024-July">July</a></h3></div>
 <ul>
 <li>
+<a href="2024-07-31.html">2024-07-31</a>
+
+<li>
 <a href="2024-07-28.html">2024-07-28</a>
 
 <li>
