--- a/vimwiki_html/diary/diary.html
+++ b/vimwiki_html/diary/diary.html
@@ -12,6 +12,36 @@
 <div id="Diary"><h1 id="Diary" class="header"><a href="#Diary">Diary</a></h1></div>
 <div id="Diary-2024"><h2 id="2024" class="header"><a href="#Diary-2024">2024</a></h2></div>
 
+<div id="Diary-2024-September"><h3 id="September" class="header"><a href="#Diary-2024-September">September</a></h3></div>
+<ul>
+<li>
+<a href="2024-09-01.html">2024-09-01</a>
+
+</ul>
+<div id="Diary-2024-August"><h3 id="August" class="header"><a href="#Diary-2024-August">August</a></h3></div>
+<ul>
+<li>
+<a href="2024-08-23.html">2024-08-23</a>
+
+<li>
+<a href="2024-08-21.html">2024-08-21</a>
+
+<li>
+<a href="2024-08-12.html">2024-08-12</a>
+
+<li>
+<a href="2024-08-11.html">2024-08-11</a>
+
+<li>
+<a href="2024-08-09.html">2024-08-09</a>
+
+<li>
+<a href="2024-08-08.html">2024-08-08</a>
+
+<li>
+<a href="2024-08-04.html">2024-08-04</a>
+
+</ul>
 <div id="Diary-2024-July"><h3 id="July" class="header"><a href="#Diary-2024-July">July</a></h3></div>
 <ul>
 <li>
