Treatment updates, manga addition, depression

--- a/vimwiki_html/Anime.html
+++ b/vimwiki_html/Anime.html
@@ -13,22 +13,22 @@
 
 <ul>
 <li class="done4">
-Frieren
+<a href="Frieren.html">Frieren</a>
 
-<li class="done1">
+<li class="done2">
 <a href="Vinland Saga.html">Vinland Saga</a>
 
-<li class="done0">
+<li class="done4">
 <a href="Goblin Slayer.html">Goblin Slayer</a>
 
 <li class="done0">
-Spy x Family
+<a href="Spy x Family.html">Spy x Family</a>
 
-<li class="done0">
+<li class="done1">
 <a href="Mashle.html">Mashle</a>
 
 <li class="done4">
-Solo Leveling
+<a href="Solo Leveling.html">Solo Leveling</a>
 
 <li class="done0">
 The Wrong Way to use Healing Magic
@@ -36,8 +36,11 @@ The Wrong Way to use Healing Magic
 <li class="done1">
 Kaiju No. 8
 
-<li class="done1">
+<li class="done4">
 <a href="Demon Slayer.html">Demon Slayer</a>
+
+<li class="done4">
+<a href="Konosuba.html">Konosuba</a>
 
 </ul>
 
