--- a/vimwiki_html/Demon Slayer.html
+++ b/vimwiki_html/Demon Slayer.html
@@ -12,6 +12,19 @@
 <div id="Demon Slayer"><h1 id="Demon Slayer" class="header"><a href="#Demon Slayer">Demon Slayer</a></h1></div>
 
 <p>
+Sat Oct 26 07:29:37 PM EDT 2024
+</p>
+
+<p>
+From what I remember, Tanjiro went to everyone's place to train, except at the one Hashira that is super scarred (who stabbed Nezuko in the beginning).
+Well, he went there, but they didn't get along so he was told to move on.
+The large Hashira that cries all the time has the saddest backstory with all his orphan kids dying in front of him and then him being blamed.
+And finally Zenitsu got some news that seems to have given him some character growth.
+We know this because at the end of the arc, they all attack Muzan and he teleports them all to his dimension and Zenitsu is awake with his lightning ability.
+So, Fitz and I are excited to see the movie hopefully together in theaters.
+</p>
+
+<p>
 Sun Jul 28 03:32:26 PM EDT 2024
 </p>
 
