--- a/vimwiki_html/Games.html
+++ b/vimwiki_html/Games.html
@@ -12,17 +12,17 @@
 <div id="Games"><h1 id="Games" class="header"><a href="#Games">Games</a></h1></div>
 
 <ul>
-<li class="done1">
+<li class="done4">
 <a href="Fallout NV.html">Fallout NV</a>
 
 <li class="done0">
 Mass Effect 2
 
 <li class="done0">
-Starfield
+<a href="Starfield.html">Starfield</a>
 
 <li class="done1">
-Doom (2016)
+<a href="Doom (2016).html">Doom (2016)</a>
 
 <li class="done0">
 Zelda: TOTK
@@ -34,7 +34,10 @@ Horizon Zero Dawn
 <a href="Pokemon Emerald (New Version).html">Pokemon Emerald (New Version)</a>
 
 <li class="done0">
-<a href="LOZ: The Minish Cap.html">LOZ: The Minish Cap</a>
+<a href="LOZ - The Minish Cap.html">LOZ - The Minish Cap</a>
+
+<li class="done0">
+<a href="Dead Space (2023).html">Dead Space (2023)</a>
 
 </ul>
 <div id="Games-Want to play"><h2 id="Want to play" class="header"><a href="#Games-Want to play">Want to play</a></h2></div>
