--- a/vimwiki_html/diary/diary.html
+++ b/vimwiki_html/diary/diary.html
@@ -12,8 +12,35 @@
 <div id="Diary"><h1 id="Diary" class="header"><a href="#Diary">Diary</a></h1></div>
 <div id="Diary-2024"><h2 id="2024" class="header"><a href="#Diary-2024">2024</a></h2></div>
 
+<div id="Diary-2024-October"><h3 id="October" class="header"><a href="#Diary-2024-October">October</a></h3></div>
+<ul>
+<li>
+<a href="2024-10-26.html">2024-10-26</a>
+
+</ul>
 <div id="Diary-2024-September"><h3 id="September" class="header"><a href="#Diary-2024-September">September</a></h3></div>
 <ul>
+<li>
+<a href="2024-09-12.html">2024-09-12</a>
+
+<li>
+<a href="2024-09-09.html">2024-09-09</a>
+
+<li>
+<a href="2024-09-07.html">2024-09-07</a>
+
+<li>
+<a href="2024-09-06.html">2024-09-06</a>
+
+<li>
+<a href="2024-09-05.html">2024-09-05</a>
+
+<li>
+<a href="2024-09-03.html">2024-09-03</a>
+
+<li>
+<a href="2024-09-02.html">2024-09-02</a>
+
 <li>
 <a href="2024-09-01.html">2024-09-01</a>
 
