--- a/vimwiki_html/index.html
+++ b/vimwiki_html/index.html
@@ -11,10 +11,6 @@
 
 <div id="Devan's Wiki"><h1 id="Devan's Wiki" class="header"><a href="#Devan's Wiki">Devan's Wiki</a></h1></div>
 
-<p>
-test
-</p>
-
 <ul>
 <li>
 Projects
@@ -41,6 +37,9 @@ Games
 Anime
 
 <li>
+Manga
+
+<li>
 Computer stuff
 
 </ul>
@@ -64,6 +63,9 @@ Relationships
 Organization
 
 </ul>
+<li>
+Notes/Writing
+
 <li>
 Errands
 
@@ -151,128 +153,6 @@ gln			- Increase doneness of checkbox
 glp			- Decrease doneness of checkbox
 
 </ul>
-<div id="Devan's Wiki-Anime Diary"><h2 id="Anime Diary" class="header"><a href="#Devan's Wiki-Anime Diary">Anime Diary</a></h2></div>
-
-<p>
-Moved to better area
-</p>
-
-<div id="Devan's Wiki-Anime Diary-Vinland Saga"><h3 id="Vinland Saga" class="header"><a href="#Devan's Wiki-Anime Diary-Vinland Saga">Vinland Saga</a></h3></div>
-
-<p>
-Moved
-</p>
-
-<div id="Devan's Wiki-Anime Diary-Frieren"><h3 id="Frieren" class="header"><a href="#Devan's Wiki-Anime Diary-Frieren">Frieren</a></h3></div>
-
-<p>
-Sun Jul  7 05:57:03 PM EDT 2024
-</p>
-
-<p>
-They just completed the labrynth for the second trial to become a first class mage.
-Badass fight scenes.
-Fitz said he'd probably like the show and I agree.
-I have two episodes left and I'm ready to watch them and see how they finally finish the exams.
-</p>
-
-<p>
-Sun Jul  7 06:53:32 PM EDT 2024
-</p>
-
-<p>
-Just finished Frieren for now. 
-It was really good.
-Lot's of life lessons in there I hop not to forget.
-Mostly, it's about the small things, and not to have a tear-ful goodbye when you know you'll see them again.
-Cool.
-</p>
-
-
-<div id="Devan's Wiki-Anime Diary-Solo Leveling"><h3 id="Solo Leveling" class="header"><a href="#Devan's Wiki-Anime Diary-Solo Leveling">Solo Leveling</a></h3></div>
-
-<p>
-Tue Jul  9 06:26:27 PM EDT 2024
-</p>
-
-<p>
-Just updating this now (again), but it was pretty good.
-Mostly just the main character doing his job change quest.
-It was difficult and fun to watch the boss fight.
-Super cool power of necromancy in the season finally.
-We'll see where that takes him in the next season.
-</p>
-
-<p>
-Mon Jul  8 05:56:08 AM EDT 2024
-</p>
-
-<p>
-Just updating this now, but last night I wached some solo-leveling to catch up with where I was at.
-I rewatched some episodes.
-He killed that one executive that was blood thirsty through his dungeons and now has a target on his back since it was a S-rank's brother.
-Then he tricked some buisiness into buying their C-rank dungeons.
-Yeah nothing crazy, just getting the work in to become A-rank.
-</p>
-
-<p>
-Vinland Saga
-</p>
-
-<p>
-Wed Jul 10 06:06:03 AM EDT 2024
-</p>
-
-<p>
-I resumed this last night.
-It's starting to get good with the king and everything.
-Now it'll be a political war and stuff since they were trying to kill the prince actually.
-Thorfin was a side character for the most part here.
-Anime seems so real when you're high.
-</p>
-
-<div id="Devan's Wiki-Anime Diary-Goblin Slayer"><h3 id="Goblin Slayer" class="header"><a href="#Devan's Wiki-Anime Diary-Goblin Slayer">Goblin Slayer</a></h3></div>
-
-<p>
-Pasted into proper link
-</p>
-
-<div id="Devan's Wiki-Game Diary"><h2 id="Game Diary" class="header"><a href="#Devan's Wiki-Game Diary">Game Diary</a></h2></div>
-
-
-
-<div id="Devan's Wiki-Game Diary-Doom (2016)"><h3 id="Doom (2016)" class="header"><a href="#Devan's Wiki-Game Diary-Doom (2016)">Doom (2016)</a></h3></div>
-<p>
-Goals:
-</p>
-<ul>
-<li class="done0">
-Upgrade the most aggresive options
-
-</ul>
-<p>
-Fri Jul  5 09:33:18 AM EDT 2024
-</p>
-
-<p>
-Just started Doom. I love the badass feel of the game.
-Just running and gunning.
-So, I just fixed the relay and have a status report on the mars base and now I have to stop a meltdown. 
-I plan on making all my upgrades to whatever can kill more stuff rather than health or radar.
-This will be a fun playthrough.
-</p>
-
-
-<p>
-Sat Jul  6 03:22:40 PM EDT 2024
-</p>
-
-<p>
-I like it and get bored of it for the same reason, it's just a simple game about killing demons.
-I just saved the mars base from a meltdown and destroyed all the "Filters" that convert the demon energy to clean energy.
-Now I need to kill the scientst cult leader for trying to open the portals.
-</p>
-
 <div id="Devan's Wiki-Testing"><h2 id="Testing" class="header"><a href="#Devan's Wiki-Testing">Testing</a></h2></div>
 
 <ul>
