Formatted Dead Space Trophies file for vimwiki listing

--- a/vimwiki_html/Dead Space (2023).html
+++ b/vimwiki_html/Dead Space (2023).html
@@ -23,6 +23,8 @@ I've finished it thrice now as of 1/1/2025.
 Still working on the Plat.
 </p>
 
+<div id="[[DSTrophies|Trophies]]"><h1 id="[[DSTrophies|Trophies]]" class="header"><a href="#[[DSTrophies|Trophies]]"><a href="DSTrophies.html">Trophies</a></a></h1></div>
+
 <div id="Diary"><h1 id="Diary" class="header"><a href="#Diary">Diary</a></h1></div>
 
 <p>
